# algorithms_in_rust

./: Cargo.toml  README.md  rust_practice_routine.md
.stfolder/: syncthing-folder-0fc0f4.txt
core_prac/: core_prac.md  rust_review01.md  rust_review02.md  rust_review03.md  rust_review04.md
core_prac/core_prac0/: Cargo.toml
core_prac/core_prac1/: Cargo.toml
core_prac/core_prac10/: Cargo.toml  answers.md
core_prac/core_prac11/: Cargo.toml  main.c
core_prac/core_prac11/src/: main.rs
core_prac/core_prac12/: Cargo.toml  test.txt
core_prac/core_prac12/src/: main.rs
core_prac/core_prac2/: Cargo.toml
core_prac/core_prac3/: Cargo.toml
core_prac/core_prac4/: Cargo.toml
core_prac/core_prac5/: Cargo.toml
core_prac/core_prac6/: Cargo.toml
core_prac/core_prac7/: Cargo.toml
core_prac/core_prac8/: Cargo.toml
core_prac/core_prac9/: Cargo.toml
datastr_prac/: fast_slow_implementation.md  ll_inplace_rev.md
datastr_prac/ds_prac0/: Cargo.toml
datastr_prac/ds_prac1/: Cargo.toml
datastr_prac/ds_prac2/: Cargo.toml
dp_bt_prac/src/: lib.rs
pattern_prac/: binheap_fornlargest.md  collections_usecases.md  handling_equality_match.md  modified_bin_search.md  overlapping_intervals_merge.md
pattern_prac/ptrn_prac0/: Cargo.toml
pattern_prac/ptrn_prac1/: Cargo.toml
pattern_prac/ptrn_prac2/: Cargo.toml
pattern_prac/solid_patterns00/: Cargo.toml
sorting_prac/: insertion_sort.md  merge_sort.md  quick_sort.md
sorting_prac/sort_prac0/: Cargo.toml
sorting_prac/sort_prac1/: Cargo.toml
sorting_prac/sort_prac2/: Cargo.toml
(+22 files in other folders)
